--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="app">
       <div class="holder headline">
-        <h1>SoulWeather Journal App</h1>
+        <h1>Soul Weather Journal</h1>
       </div>
       <h2 id="error" class="hide">Bad data entered. Please try again.</h2>
       <div class="holder zip city">
