--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -16,7 +16,19 @@ body {
     min-height: 100vh
 }
 
+section.search {
+    max-width: 960px;
+    margin: 50px auto;
+    padding: 0 30px;
+}
 
+.input-container {
+    width: 650px;
+    max-width: 100%;
+    margin: 20px auto 25px auto;
+    background-color: #ffffff;
+    padding: 30px;
+}
 
 .zip,
 .feel {
@@ -117,7 +129,7 @@ button {
 footer {
     width: 100%;
     text-align: center;
-    /* background-color: rgb(248, 164, 164); */
-    color: #f89f9f;
-    margin-top: 110px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(248, 164, 164);
+    margin-top: auto;
 }
