--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -14,30 +14,36 @@
       <div class="holder headline">
         <h1>Soul Weather Journal</h1>
       </div>
-      <h2 id="error" class="hide">Bad data entered. Please try again.</h2>
-      <div class="holder zip city">
-        <label for="zip">Enter zipcode here</label>
-        <input
-          type="text"
-          id="zip"
-          maxlength="5"
-          size="13"
-          placeholder="enter zip code here"
-        />
-        <label for="city"><b>or</b> search by city</label>
-        <input type="text" id="city" size="13" placeholder="enter city here" />
-      </div>
-      <div class="holder feel">
-        <label for="feelings">How are you feeling today?</label>
-        <textarea
-          class="myInput"
-          id="feelings"
-          placeholder="Enter your feelings here"
-          rows="9"
-          cols="50"
-        ></textarea>
-      </div>
-      <button id="generate" type="submit">Generate</button>
+      <main>
+        <section class="search">
+          <div class="input-container">
+            <h2 id="error" class="hide">Bad data entered. Please try again.</h2>
+          <div class="holder zip city">
+            <label for="zip">Zip Code</label>
+            <input
+              type="text"
+              id="zip"
+              maxlength="5"
+              size="13"
+              placeholder="enter zip code"
+            />
+            <label for="city"><b>or</b> City</label>
+            <input type="text" id="city" size="13" placeholder="enter city" />
+          </div>
+          <div class="holder feel">
+            <label for="feelings">How are you feeling today?</label>
+            <textarea
+              class="myInput"
+              id="feelings"
+              placeholder="Enter your feelings here"
+              rows="3"
+              cols="37"
+            ></textarea>
+          </div>
+          <button id="generate" type="submit">Generate</button>
+          </div>
+        </section>
+      </main>
       <div id="journal" class="holder entry hide">
         <div class="title">Most Recent Entry</div>
         <div id="entryHolder">
