--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -10,10 +10,19 @@ body {
 #app {
     display: flex;
     flex-direction: column;
-    align-items: center;
     font-family: 'Oswald', sans-serif;
     background-color: #f89f9f;
     min-height: 100vh
+}
+
+.row {
+    display: flex;
+}
+
+.column {
+    flex: 50%;
+    padding: 30px;
+    height: auto;
 }
 
 section.search {
@@ -21,13 +30,44 @@ section.search {
     margin: 50px auto;
     padding: 0 30px;
 }
+.search-form {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 4px;
+    padding: 20px;
+    background: white;
+    box-shadow: 0 1px 3px hsla(0%, 0%, 0%, 0.2);
+}
 
 .input-container {
     width: 650px;
     max-width: 100%;
     margin: 20px auto 25px auto;
-    background-color: #ffffff;
+}
+
+.styled-input {
+    float: left;
+    width: 293px;
+    margin: 1rem 0;
+    position: relative;
+    border-radius: 4px;
+}
+
+.styled-input.wide { 
+    width: 650px;
+    max-width: 100%;
+}
+
+input {
     padding: 30px;
+    border: 0;
+    width: 100%;
+    font-size: 1rem;
+    background-color: #eff4f78f;
+    color: rgb(0, 0, 0);
+    border-radius: 4px;
 }
 
 .zip,
@@ -39,17 +79,14 @@ section.search {
     margin-right: 20px;
 }
 
-label {
-    margin-right: 10px;
-}
+// label {
+//     margin-right: 10px;
+// }
 
-label,
-input,
 textarea {
     vertical-align: middle;
 }
 
-input,
 .myInput {
     padding: 10px;
     font-size: large;
@@ -80,13 +117,16 @@ input,
 }
 
 button {
-    font-size: large;
-    border-radius: 5px;
-    padding: 20px;
-    margin-bottom: 40px;
-    background-color: #ffffff;
-    color: #f89f9f;
-    box-shadow: 2px 2px 4px black;
+    width: 100%;
+    padding: 15px 20px;
+    border-radius: 3px;
+    background-color: #f89f9f;
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    line-height: 1;
+    transition-duration: 0.4s;
     cursor: pointer;
 }
 
